--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href=""https://www.lewagon.com" class="btn-purple">Discover Le Wagon</a>
       </div>
 
-      <div class="card-white">
+      <div class="card-white-small">
         <h2>Follow me.</h2>
         <ul class="list-inline">
           <li><a href="https://github.com/LeSoOb" target="blank"><i class="fab fa-github-square"></i></a></li>
