--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <img src="images/profile.jpg" width="250px" alt="profile" class="img-circle">
 
-        <p>I love special effects, rollercoasters, coffee and yoga. When I'm not producing commercials, learning web dev or taking care of my kids, I run a forest kindergarten voluntarily. 🌿🍄</p>
+        <p>I love visual effects, rollercoasters, coffee and yoga. When I'm not producing commercials, learning web dev or taking care of my kids, I run a forest kindergarten voluntarily. 🌿🍄</p>
 
         <a href=""https://www.lewagon.com" class="btn-purple">Discover Le Wagon</a>
       </div>
